# MASE

./: .gitignore  LICENSE  README.md  auto_rebuild.py  batch_import.py  export_standalone.py  index.html  install.sh  package-lock.json  package.json  project-rules.md  pyproject.toml  quick_rebuild.py  run_test.py  vitest.config.js  八字命理百科全书.html
.frontend-slides/: unified-dev-framework-training.html
github-repo/measures-framework-package/: README.md  index.html  install.sh  project-rules.md  pyproject.toml
github-repo/measures-framework-package/agents/agent-1-orchestrator/: SKILL.md
github-repo/measures-framework-package/agents/agent-2-requirements/: SKILL.md
github-repo/measures-framework-package/agents/agent-3-development/: SKILL.md
github-repo/measures-framework-package/agents/agent-4-quality/: SKILL.md
github-repo/measures-framework-package/docs/: design.md  how-to-build-ai-coding-framework.md  project-structure-spec.md  user-guide.md
github-repo/measures-framework-package/mase_cli/: contract.py
github-repo/measures-framework-package/mase_cli/commands/: check_project.py  init_project.py
github-repo/measures-framework-package/skills/brainstorming/: SKILL.md
github-repo/measures-framework-package/skills/bug-fixer/: SKILL.md
github-repo/measures-framework-package/skills/code-quality-controller/: SKILL.md
github-repo/measures-framework-package/skills/code-review/: SKILL.md
github-repo/measures-framework-package/templates/: .openspec.yaml  STRUCTURE.md  architecture.md  mase-state.yaml  proposal.md
github-repo/measures-framework-package/training/: measures-training.html
(+161 files in other folders)
