[project]
name = "bazi-encyclopedia"
version = "0.1.0"
description = "八字百科全书 - 多本书籍自动融合为结构化百科全书"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.7",
    "sentence-transformers>=2.7",
    "openai>=1.30",          # Ollama 兼容
    "pypdf>=4.0",
    "ebooklib>=0.18",
    "python-docx>=1.1",
    "Pillow>=10.0",
    "paddleocr>=2.8",
    "paddlepaddle>=3.0.0b1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "chardet>=5.0",
    "aiofiles>=23.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["bazi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
