[project]
name = "mase"
version = "1.1.0"
description = "MASE (Measures AI Software Engineering) — 麦哲思AI软件开发统一流程 CLI"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary — Measures (麦哲思) 版权所有" }
authors = [{ name = "Measures" }]
keywords = ["ai", "software-engineering", "framework", "tdd", "dev-process"]

[project.scripts]
mase = "mase_cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9"]

[tool.setuptools.packages.find]
include = ["mase_cli*"]
